syntax="proto3";

package order_service;
option go_package="genproto/order_service";

import "google/protobuf/empty.proto";


message CreateOrderReq {
    string user_id = 1;
    string merchant_id = 2;
}

message CreateOrderResponse {
    string id = 1;
    string user_id = 2;
    string merchant_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message OrderId {
    string id = 1;
}

message GetSingleOrderResponse {
    string id = 1;
    string user_id = 2;
    string merchant_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message GetListOrdersReq {
    int32 limit = 1;
    int32 offset = 2;
}

message GetListOrdersResponse {
    repeated GetSingleOrderResponse getorders = 1;
    int32 count = 2;
}

message UpdateOrderReq {
    string id = 1;
    string user_id = 2;
    string merchant_id = 3;
}

message UpdateOrderResponse {
    string id = 1;
    string user_id = 2;
    string merchant_id = 3;
    string created_at = 4;
    string updated_at = 5;
}